rust/kcl-lib/tests/array_concat_non_array/execution_error.snap
---
source: kcl-lib/src/simulation_tests.rs
description: Error from executing array_concat_non_array.kcl
---
KCL Semantic error

  × semantic: Expected an array for concatenation but found a number
   ╭─[1:5]
 1 │ a = concat([1, 2], other = 3)
   ·     ────────────┬────────────┬
   ·                 ╰── tests/array_concat_non_array/input.kcl
   ·                 ╰── tests/array_concat_non_array/input.kcl
 2 │ assert(a[2], isEqualTo = 3, tolerance = 0.00001, error = "3 should have been coerced to [3] and concatenated")
   ╰────
  ╰─▶ KCL Semantic error
      
        × semantic: Expected an array for concatenation but found a number
         ╭─[1:5]
       1 │ a = concat([1, 2], other = 3)
         ·     ────────────┬────────────
         ·                 ╰── tests/array_concat_non_array/input.kcl
       2 │ assert(a[2], isEqualTo = 3, tolerance = 0.00001, error = "3 should
      have been coerced to [3] and concatenated")
         ╰────
